# notification_system

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
notifications/: models.py  services.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
notifications/tests/: test_models.py  test_services.py  test_tasks.py
