[tool.poetry]
name = "notification-system"
version = "0.1.0"
description = ""
authors = ["Tamir Mandreev <tamirmandreev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
djangorestframework = "^3.16.1"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.2"
pytest-django = "^4.11.1"
ipython = "^9.5.0"
celery = "^5.5.3"
redis = "^6.4.0"
smsaero-api = "^3.1.1"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py",]
addopts = "-p no:django_tests"
